attemping y-overflow fix on home page. changed dvh to vh on height

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #vanta {
-    min-height: 100dvh;
+    min-height: 100vh;
+    
     width: 100%;
     position: fixed;
     z-index: -5;
